Logout observer replaced by simple boolean variable.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,3 +1,6 @@
+<div *ngIf="loginService.isLoggedIn == true">
+  Welcome :)
+</div>
 <div class="container" fxLayout="row wrap">
 <form [formGroup]="loginForm" (submit)="login()"
       class="form"
