Added footer icon.

--- a/src/app/ui/bottom-bar/bottom-bar.component.html
+++ b/src/app/ui/bottom-bar/bottom-bar.component.html
@@ -1,5 +1,6 @@
 <mat-toolbar color="primary">
-  <div fxFlex fxLayout fxLayoutAlign="center" fxHide.xs>
-    <p>All you need is love </p>
+  <div fxFlex fxLayout="row wrap"  fxLayoutAlign="center" fxHide.xs>
+    <div fxLayoutAlign="center">All you need is love
+      <mat-icon class="bottom-icon">favorite</mat-icon></div>
   </div>
 </mat-toolbar>
