--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -9,6 +9,12 @@
     </mat-card-header>
 
     <mat-card-content>
+      <div class="alert-msg" [hidden]="!registrationError">
+        There was a problem during registration. Please try again.
+      </div>
+      <div class="alert-msg" [hidden]="!internalServerError">
+        Internal server error. Please try again later.
+      </div>
       <mat-form-field class="item">
         <input matInput formControlName="email" placeholder="Email">
         <mat-error *ngIf="registrationForm.controls.email.hasError('required')">
