Added http request interceptor. Updated logout method.

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,8 @@
+<div>
+  <button (click)="testMe()">Test me!</button>
 
+  <p>Value: {{testData.username}}</p>
+</div>
 <div class="container" fxLayout="row wrap">
 <form [formGroup]="loginForm" (submit)="login()"
       class="form"
