Added book component.

--- a/src/app/ui/navigation-bar/navigation-bar.component.html
+++ b/src/app/ui/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,8 @@
 <mat-toolbar color="primary">
   <div>
-    <a routerLink="/posts">Inspire me!</a>
+    <a routerLink="/posts">Inspire me! | </a>
     <div *ngIf="currentUser">Welcome {{currentUser.username}}</div>
+    <a routerLink="/books">Books</a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
