--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,38 +1,43 @@
-
 .container {
-    /* min-height: 100%;*/
     width: 100%;
+    margin-top: 65px;
 }
 .search-button {
-    height: 40%;
+    margin-left: 20px;
+}
+.search-button:hover {
+    background: #3a76cf;
+    transition: all 0.3s ease-out;
 }
 .search-form {
-    width: 90%;
-}
-
-.mat-form-field {
     font-size: 14px;
-    width: 100%;
+    padding: 20px 0;
 }
-
 .card-deck-container {
-    width: 100%;
-    max-width: 1200px;
     position: relative;
     border-radius: 2px;
-    padding: 10px 10px 30px;
-    margin: 10px 10px 10px 10px;
     background-color: #f5f5f5;
 }
 
 .card-container {
-    padding: 3px 3px 3px 3px;
+    padding: 5px 8px;
 }
 .card-item {
-
+    position: relative;
+    height: 400px;
+    word-wrap: break-word;
+    text-align: justify;    
 }
-
-.mat-table {
+.card-item mat-card-content {
+    height: 300px;
+    overflow-y: auto;
+}
+.card-item mat-card-actions {
+    position: absolute;
+    bottom: 10px;
+    right: 16px;
+}
+/* .mat-table {
     overflow: auto;
     max-height: 500px;
-}
+} */
