--- a/src/app/ui/navigation-bar/navigation-bar.component.css
+++ b/src/app/ui/navigation-bar/navigation-bar.component.css
@@ -1,9 +1,9 @@
-a {
+mat-toolbar ul li a {
   text-decoration: none;
   color: white;
 }
-a:hover, a:active{
-  color: lightgray;
+mat-toolbar ul li a:hover {
+  color: rgb(180, 180, 180);
 }
 .navigation-items{
   list-style-type: none;
@@ -11,13 +11,22 @@ a:hover, a:active{
   margin: 0;
 }
 mat-toolbar{
-  border-radius: 3px;
   position: fixed;
   top: 0;
   width: 100%;
-  z-index: 1;
+  z-index: 100;
 }
-
+#site-name {
+  text-decoration: none;
+  color: white;
+  font-size: 35px;
+  font-weight: 700;
+  letter-spacing: 5px;
+}
+#user-name {
+  color: aqua;
+  padding-right: 10px;
+}
 @media(max-width: 959px){
   mat-toolbar{
     border-radius: 0px;
