--- a/src/app/ui/navigation-bar/navigation-bar.component.html
+++ b/src/app/ui/navigation-bar/navigation-bar.component.html
@@ -1,8 +1,13 @@
 <mat-toolbar color="primary">
-  <div>
-    <a routerLink="/posts">Inspire me! | </a>
-    <div *ngIf="currentUser">Welcome {{currentUser.username}}</div>
-    <a routerLink="/books">Books</a>
+  <div fxFlex fxLayout>
+    <ul fxLayout fxLayoutGap="15px" class="navigation-items">
+      <li><a routerLink="/posts">Inspire me!</a></li>
+      <li><a routerLink="/books">Books</a></li>
+      <li></li>
+    </ul>  
+  </div>
+  <div fxFlex fxLayoutAlign="center">
+    <a id="site-name" routerLink="/"><em>Travel Diary</em></a>
   </div>
   <div fxFlex fxLayout fxLayoutAlign="end" fxHide.xs>
     <ul fxLayout fxLayoutGap="15px" class="navigation-items">
@@ -11,6 +16,9 @@
       </li>
       <li>
         <a routerLink="/registration">Registration</a>
+      </li>
+      <li>
+        <div *ngIf="currentUser">Welcome <i id="user-name">{{currentUser.username}}</i></div>
       </li>
       <li>
         <a routerLink="/" (click)="logout()">Logout</a>
