--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,13 @@
 /* You can add global styles to this file, and also import other style files */
 
-html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body {
+    margin: 0;
+    font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+a:hover {
+    transition: all 0.3s ease-out;
+}
+.global-container {
+    width: 1100px;
+    margin: auto;
+}
