--- a/src/app/posts/posts.component.css
+++ b/src/app/posts/posts.component.css
@@ -1,34 +1,43 @@
-.container {
-    width: 100%;
-    margin-top: 65px;
+.post-main-div {
+    border-top: 2px solid #49aa3c;
+    background: linear-gradient(45deg, rgb(228, 240, 121), rgb(142, 226, 93));
 }
 .search {
     float: left;
 }
 .search-button {
     margin-left: 20px;
+    background: none;
+    font-size: 25px;
+    border-radius: 100%;
 }
 .search-button:hover {
-    background: #3a76cf;
+    background: rgb(0, 0, 0, 0.2);
     transition: all 0.3s ease-out;
 }
 .search-form {
     font-size: 14px;
     padding: 20px 0;
 }
+.search-form input {
+    font-size: 20px;
+}
 .view-style {
     float: right;
     padding-top: 25px;
 }
 .view-style i {
-    color: #3f51b5;
+    color: rgb(52, 207, 86);
     font-size: 40px;
     margin-right: 10px;
 }
 .view-style i:hover {
     cursor: pointer;
-    color: #3a76cf;
+    color: #27aa3d;
     transition: all 0.3s ease-out;
+}
+.view-style .view-active {
+    color: #1c7a0f;
 }
 .list {
     width: 100%;
@@ -41,13 +50,15 @@
 .card-deck-container {
     position: relative;
     border-radius: 2px;
-    background-color: #f5f5f5;
 }
-
 .card-container {
     padding: 5px 8px;
 }
 .card-item {
+    background: url("../../img/wood.jpg") center no-repeat;
+    background-size: cover;
+    border: 1px solid #aa853c;
+    box-shadow: 0 0 15px 0 rgba(0,0,0,0.4);
     position: relative;
     height: 400px;
     word-wrap: break-word;   
@@ -60,6 +71,13 @@
     position: absolute;
     bottom: 10px;
     right: 16px;
+}
+.card-item mat-card-actions button:hover {
+    background: #af9f1457;
+    color: white;
+}
+mat-paginator {
+    background: none;
 }
 /* .mat-table {
     overflow: auto;
