--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,53 +1,20 @@
-<div class="global-container">
-    <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center"
+    <div class="post-main-div" fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center"
          xmlns="http://www.w3.org/1999/html">
-    
-        <div class="container clearfix">
+        <div class="global-container">
+        <div class="clearfix">
             <div class="search">
                 <mat-form-field class="search-form">
-                    <input matInput placeholder="Search" type="text">
+                    <input matInput autocomplete="off" placeholder="Search" type="text">
                 </mat-form-field>
-                <button class="search-button" button="submit" mat-raised-button color="primary">Search</button>
+                <button class="search-button" button="submit" mat-raised-button><i class="fas fa-search"></i></button>
             </div>
 
             <div class="view-style">
-                <span><i class="fas fa-th-list" (click)="changeView('list')"></i></span>
-                <span><i class="fas fa-th" (click)="changeView('grid')"></i></span>
+                <span><i class="fas fa-th-list" (click)="changeView('list')" [ngClass]="{'view-active' : layout == 'list'}"></i></span>
+                <span><i class="fas fa-th" (click)="changeView('grid')" [ngClass]="{'view-active' : layout == 'grid'}"></i></span>
             </div>
         </div>
     
-        <!-- <div fxLayout="row wrap" fxLayoutAlign="center" class="card-deck-container">
-    
-            <div fxFlex="60%" class="card-container"
-                 [(ngModel)]="entity" name="entity" ngDefaultControl
-                 *ngFor="let post of entity">
-    
-                <mat-card class="card-item">
-    
-                    <mat-card-header>
-                        <mat-card-title class="mat-card-title">{{post.title}}</mat-card-title>
-                    </mat-card-header>
-    
-                    <mat-card-content>
-                        <div>
-                            <pre>{{post.description}}</pre>
-                        </div>
-                        <div class="card-text-content">
-                            {{post.description}}
-                        </div>
-                    </mat-card-content>
-    
-                    <mat-card-actions fxLayout="row" fxLayoutAlign="end center">
-                        <button mat-button>Read more</button>
-                        <button mat-button>Like</button>
-                    </mat-card-actions>
-                </mat-card>
-            </div>
-        </div>
-        -->
-    
-
-
         <div fxLayout="row wrap" fxLayoutAlign="center" class="card-deck-container">
             <div *ngFor="let post of entity" class="card-container" [ngClass]="layout == 'list' ? 'list' : 'grid'">
                 <mat-card class="card-item">
@@ -63,10 +30,10 @@
     
                     <mat-card-actions fxLayout="row" fxLayoutAlign="end">
                         <button mat-button>Read more</button>
-                        <button title="Wish to go there" mat-icon-button color="primary">
+                        <button title="Wish to go there" mat-icon-button>
                             <mat-icon>flight_takeoff</mat-icon>
                         </button>
-                        <button title="Have visited this place" mat-icon-button color="primary">
+                        <button title="Have visited this place" mat-icon-button>
                             <mat-icon>check</mat-icon>
                         </button>
                     </mat-card-actions>
@@ -75,7 +42,7 @@
             </div>
     
         </div> <!--card-deck-container -->
-        <div fxLayout="row" class="container" fxLayoutAlign="center" *ngIf="entity.length > 0">
+        <div fxLayout="row" fxLayoutAlign="center" *ngIf="entity.length > 0">
             <mat-paginator
                     [length]="25"
                     [pageSize]="5"
