--- a/src/app/posts/posts.component.html
+++ b/src/app/posts/posts.component.html
@@ -1,6 +1,5 @@
 <div class="global-container">
-    <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center"
-         xmlns="http://www.w3.org/1999/html">
+    <div fxLayout="row wrap" fxLayout.xs="column" fxLayoutGap="0.5%" fxLayoutAlign="center">
     
         <div class="container">
             <mat-form-field class="search-form">
@@ -8,53 +7,13 @@
             </mat-form-field>
             <button class="search-button" button="submit" mat-raised-button color="primary">Search</button>
         </div>
-    
-        <!-- <div fxLayout="row wrap" fxLayoutAlign="center" class="card-deck-container">
-    
-            <div fxFlex="60%" class="card-container"
-                 [(ngModel)]="entity" name="entity" ngDefaultControl
-                 *ngFor="let post of entity">
-    
-                <mat-card class="card-item">
-    
-                    <mat-card-header>
-                        <mat-card-title class="mat-card-title">{{post.title}}</mat-card-title>
-                    </mat-card-header>
-    
-                    <mat-card-content>
-                        <div>
-                            <pre>{{post.description}}</pre>
-                        </div>
-                        <div class="card-text-content">
-                            {{post.description}}
-                        </div>
-                    </mat-card-content>
-    
-                    <mat-card-actions fxLayout="row" fxLayoutAlign="end center">
-                        <button mat-button>Read more</button>
-                        <button mat-button>Like</button>
-                    </mat-card-actions>
-                </mat-card>
-            </div>
-        </div>
-    
-        <div fxLayout="row" class="container" fxLayoutAlign="center">
-            <mat-paginator
-                    [length]="25"
-                    [pageSize]="5"
-                    [pageSizeOptions]="[5, 12, 24]"
-                    (page)="updateUsersDisplayedInPage($event)">
-            </mat-paginator>
-        </div> -->
-    
-        <div fxLayout="row wrap" fxLayoutAlign="left" class="card-deck-container">
-            <div fxFlex="33%" *ngFor="let post of entity" class="card-container">
+
+        <div fxLayout="row wrap" fxLayoutAlign="left" class="card-deck-container" *ngIf="page.content?.length">
+            <div fxFlex="33%" *ngFor="let post of page.content" class="card-container">
                 <mat-card class="card-item">
                     <mat-card-header>
                         <mat-card-title class="mat-card-title">{{post.title}}</mat-card-title>
                     </mat-card-header>
-    
-                    <!-- <img mat-card-image src="{{post.description}}" alt="Picture"> -->
                     <mat-card-content>
                         <div class="card-text-content" [innerHTML]="post.description">
                         </div>
@@ -72,14 +31,13 @@
     
                 </mat-card>
             </div>
-    
         </div> <!--card-deck-container -->
-        <div fxLayout="row" class="container" fxLayoutAlign="center" *ngIf="entity.length > 0">
+        <div fxLayout="row" class="container" fxLayoutAlign="center" *ngIf="page.content?.length">
             <mat-paginator
-                    [length]="25"
-                    [pageSize]="5"
+                    [length]="page.totalElements"
+                    [pageSize]="page.pageSize"
                     [pageSizeOptions]="[5, 12, 24]"
-                    (page)="updateUsersDisplayedInPage($event)">
+                    (page)="updatePage($event)">
             </mat-paginator>
         </div>    
     </div>
