--- a/src/app/ui/bottom-bar/bottom-bar.component.html
+++ b/src/app/ui/bottom-bar/bottom-bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar>
   <div fxFlex fxLayout="row wrap"  fxLayoutAlign="center" fxHide.xs>
     <div fxLayoutAlign="center">All you need is love
-      <mat-icon class="bottom-icon"><i class="fas fa-heart"></i></mat-icon></div>
+      <mat-icon class="bottom-icon"><i class="material-icons">favorite</i></mat-icon></div>
   </div>
 </mat-toolbar>
